add filter by name that starts by a string
