# swagger.yaml
@@ -33,11 +33,11 @@ paths:
           type: string
         description: Filter by product name
       - in: query
-        name: tag
+        name: tags
         required: false
         schema:
           type: string
-        description: Filter by product tag
+        description: Filter by product tag, example (tags=motor lifestyle) each tag must be separeted by commas ,
       - in: query
         name: min_price  
         required: false
@@ -50,6 +50,12 @@ paths:
         schema:
           type: integer
         description: Filter by product maximun price
+      - in: query
+        name: sort  
+        required: false
+        schema:
+          type: string
+        description: Set the order of the list, put field name to order by it example "sort=name". If you use - character you get the list in desc order example "sort=-name"
       responses:
         '200':    # status code
           description: A JSON array of user names
